[gd_scene load_steps=2 format=3 uid="uid://cqka6ri3pjveu"]

[ext_resource type="Script" path="res://addons/debug_node_groups/debug_groups.gd" id="1"]

[node name="DebugGroups" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Set debug groups:"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="CollisionShapeOptions" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ToggleDrawButton" type="Button" parent="."]
layout_mode = 2
text = "Toggle Draw"

[node name="InstructionsLabel" type="Label" parent="."]
layout_mode = 2
text = "Please select a collision or ray cast node."
horizontal_alignment = 1
